--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='estilos.css')}}">
-    <title>Alvaro Granados prueba AWS</title>
+    <title>Alvaro Granados prueba 2 AWS</title>
 </head>
 <body>
 
